# LabWeb

./: .gitignore  .secrets.toml  PGinaInicial.html  README.md  pyproject.toml  settings.local.toml  settings.toml
enums/: tipo.py
models/: db.py
src/: config.py  index.html
src/api/: dependencies.py  email_service.py  main.py  schemas.py  security.py
src/api/routers/: admin.py  auth.py  campus.py  cursos.py  departamentos.py  postagens.py  professores.py  projetos.py
src/enums/: status.py
src/models/: db.py  db_annotations.py
src/scripts/: populate_db.py
src/static/styles/: style.css  style2.css  style_cadastrar_projeto.css  style_eventos.css  style_noticias.css  style_projetos.css  vars2.css
src/templates/: CadastrarProjeto.html  PGinaDeEventos.html  PGinaDeNotCias.html  PGinaDeProjetos.html  PGinaInicial.html  cadastrar_professor.html  cadastrar_projeto.html  cadastrar_publicacao.html  cadastro.html  configuracoes.html  detalhes.html  detalhes_projeto.html  editar_projeto.html  editar_publicacao.html  eventos.html  index.html  index2.html  meus_projetos.html  minhas_publicacoes.html  noticias.html  projetos.html
styles/: style.css
