[project]
name = "labweb"
version = "0.1.0"
description = ""
authors = [
    {name = "Luiza Florentino",email = "luizaflorentino@escavador.com"}
]
readme = "README.md"
requires-python =">=3.12,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "asyncmy (>=0.2.10,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
