[tool.poetry]
name = "labweb"
version = "0.1.0"
description = "API para o projeto LabWeb" # Adicione uma descrição
authors = ["Luiza Florentino <luizaflorentino@escavador.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}] # Chave para o layout src

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
sqlalchemy = ">=2.0.41,<3.0.0"
dynaconf = ">=3.2.11,<4.0.0"
mysqlclient = ">=2.2.7,<3.0.0"
asyncmy = ">=0.2.10,<0.3.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"} # Adicionado 'standard' extras e ajustado
pydantic = {extras = ["email"], version = "^2.11.5"}
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"] # Recomenda-se usar >=1.0.0
build-backend = "poetry.core.masonry.api"
